--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.8.8"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.0.0",
-    "rimraf": "^2.5.4",
-    "gulp-livereload": "^3.8.1",
-    "laravel-elixir": "^3.0.0"
+    "laravel-elixir": "^3.0.0",
+    "bootstrap-sass": "^3.0.0"
   }
 }
