--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-messages": "^1.5.8",
     "angular-bootstrap": "^2.0.1",
     "angular-strap": "^2.3.9",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-oauth2": "^4.0.0"
   }
 }
