--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-strap": "^2.3.9",
     "bootstrap": "^3.3.7",
     "angular-oauth2": "^4.0.0",
-    "ng-dialog": "^0.6.2"
+    "ng-dialog": "^0.6.2",
+    "ng-file-upload": "^12.2.5"
   }
 }
